<resources>
    <string name="app_name" translatable="false">NiceTab</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="github_url" translatable="false"><![CDATA[https://github.com/ogaclejapan/SmartTabLayout]]></string>
    <string name="demo_title_basic">Basic</string>
    <string name="tab_home">Home</string>
    <string name="tab_activity">Activity</string>
    <string name="tab_search">Search</string>
    <string name="tab_me">Me</string>
    <string name="tab_long_long_title">Long Long Title</string>
    <string name="tab_mode">Show Mode</string>
    <string name="title_only">Show Title Only</string>
    <string name="icon_only">Show Icon Only</string>
    <string name="both">Show title and icon</string>
    <string name="tab_color_blend_mode">Tab Color Blend Mode</string>
    <string name="none">None</string>
    <string name="default_selected">Default Selected</string>
    <string name="next_selected">Next Selected</string>
    <string name="tab_draw_order">Draw Order</string>
    <string name="indicatorUnderlineDivider">Indicator Underline Divider</string>
    <string name="indicatorDividerUnderline">Indicator Divider Underline</string>
    <string name="underlineIndicatorDivider">Underline Indicator Divider</string>
    <string name="underlineDividerIndicator">Underline Divider Indicator</string>
    <string name="dividerIndicatorUnderline">Divider Indicator Underline</string>
    <string name="dividerUnderlineIndicator">Divider Underline Indicator</string>
    <string name="show_hide">Show Hide</string>
    <string name="show_underline">Show Underline</string>
    <string name="hide_underline">Hide Underline</string>
    <string name="show_divider">Show Divider</string>
    <string name="hide_divider">Hide Divider</string>
    <string name="show_indicator">Show Indicator</string>
    <string name="hide_indicator">Hide Indicator</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="fit_content_width">Tab Fit Content Width</string>
    <string name="distribute_evenly">Distribute Evenly</string>
    <string name="tab_selected_position">Tab Selected Position</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="tab_badge">Tab Badge</string>
    <string name="test_badge">Test Badge</string>
    <string name="clear_badge">Clear Badge</string>
    <string name="tab_icon_style">Tab Icon Style</string>
    <string name="ios" translatable="false">iOS</string>
    <string name="android" translatable="false">Android</string>
</resources>
